# cargo-warden

./: .gitignore  AGENTS.md  AGENT_LITE_ADAPTER_AUDIT.MD  AGENT_LITE_REFACTOR_REPORT.MD  AVATAR.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  END_TO_END_TUTORIAL.md  EVENT_LOG_ABI.md  INSTALLATION.md  POLICY_SCHEMA.md  README.md  RELEASING.md  REPO_AGENTS.md  ROADMAP_PHASE1.md  ROADMAP_PHASE2.md  ROADMAP_PHASE3.md  SECURITY.md  SECURITY_MODEL.md  SPEC.md  deny.toml  flake.nix  local_setup.sh  mcp.json  repo-setup.sh  repo_setup.sh  run_examples.sh  rust-toolchain.toml  shell.nix
.config/: spellcheck.toml  tech.dic
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml  Publish Crates.yml  Warden CI.yml  build-bpf-artifacts.yml  cargo-geiger.yml  ci.yml  codex-cleanup.yml  dependabot-automerge.yml  publish-crates.yml  publish.yml  warden-ci.yml  zizmor.yml
DOCS/: CONTRIBUTING.md  INDEX.md  POLICY_SCHEMA.md  SECURITY.md
crates/agent-lite/: Cargo.toml  build.rs
crates/agent-lite/proto/: agent.proto
crates/agent-lite/src/: lib.rs
crates/bpf-api/: Cargo.toml
crates/bpf-api/src/: lib.rs
crates/bpf-core/: Cargo.toml  build.rs
crates/bpf-core/src/: host_maps.rs  lib.rs  tests.rs
crates/bpf-host/: Cargo.toml
crates/bpf-host/src/: lib.rs  prebuilt.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs  metadata.rs  policy.rs  privileges.rs  sandbox.rs  test_support.rs
crates/cli/src/commands/: build.rs  doctor.rs  events.rs  init.rs  mod.rs  report.rs  run.rs  setup.rs  status.rs
crates/cli/tests/: sandbox.rs
crates/event-reporting/: Cargo.toml
crates/event-reporting/src/: lib.rs
crates/policy-compiler/: Cargo.toml
crates/policy-compiler/src/: lib.rs
crates/policy-core/: Cargo.toml
crates/policy-core/src/: lib.rs  policy.rs  raw.rs  rules.rs  validation.rs  workspace.rs
crates/policy-orchestrator/: Cargo.toml
crates/policy-orchestrator/src/: lib.rs
crates/sandbox-runtime/: Cargo.toml
crates/sandbox-runtime/src/: agent.rs  bpf.rs  cgroup.rs  command_env.rs  fake.rs  layout.rs  lib.rs  maps.rs  real.rs  runtime.rs  seccomp.rs  util.rs  workload.rs
crates/testkits/: Cargo.toml
crates/testkits/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
cw/: bundle.ps1  bundle.sh  deny.toml  flake.nix
cw/.github/workflows/: CI.yml
cw/crates/bpf-api/: Cargo.toml
cw/crates/bpf-core/: Cargo.toml
cw/crates/bpf-core/src/: host_shims.rs  lib.rs
cw/crates/bpf-host/: Cargo.toml
cw/crates/bpf-host/src/: lib.rs  prebuilt.rs
cw/crates/cli/: Cargo.toml
cw/crates/cli/src/: main.rs  policy.rs
cw/crates/cli/src/commands/: build.rs  events.rs  init.rs  mod.rs  run.rs
cw/crates/cli/tests/: sandbox.rs
cw/crates/policy-core/src/: lib.rs  policy.rs  validation.rs  workspace.rs
cw/crates/policy-orchestrator/: Cargo.toml
cw/crates/sandbox-runtime/src/: bpf.rs  layout.rs  lib.rs  maps.rs  runtime.rs  workload.rs
cw/docs/: CONTRIBUTING.md  RELEASING.md  SOURCE_OF_TRUTH.md  SPEC.md
cw/examples/fs-outside-workspace/: Cargo.toml
cw/examples/fs-outside-workspace/src/: lib.rs
cw/examples/git-clone-https/: Cargo.toml  build.rs
cw/examples/network-build/: Cargo.toml  build.rs
cw/examples/network-fs-demo/: build.rs
cw/examples/spawn-bash/src/: main.rs
cw/scripts/: build-dist.sh
cw/scripts/ci/: run_publish.sh
docs/: CONTRIBUTING.md  INSTALLATION.md  POLICY_COOKBOOK.md  SPEC.md
examples/: PROMETHEUS_DASHBOARD.json  README.md
examples/fs-outside-workspace/: Cargo.toml  README.md  build.rs
examples/git-clone-https/: Cargo.toml  README.md
examples/git-clone-https/src/: lib.rs
examples/network-build/: Cargo.toml  README.md  build.rs
examples/network-build/src/: lib.rs
examples/network-fs-demo/: Cargo.toml  README.md
examples/network-fs-demo/src/: main.rs
examples/proc-macro-hog/: Cargo.toml  README.md
examples/proc-macro-hog/proc-macro-hog-macro/: Cargo.toml
examples/proc-macro-hog/proc-macro-hog-macro/src/: lib.rs
examples/proc-macro-hog/src/: main.rs
examples/spawn-bash/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: net.rs  policy.rs
scripts/: build-bpf.sh  build-dist.sh  check_path_versions.py  check_path_versions.rs  check_path_versions.sh  prune_branches.sh  publish-crates.sh  run_ci_checks.sh  run_examples.sh
scripts/ci/: aggregate_cargo_checks.sh  create_release_tag.sh  determine_release_tag.sh  post_publish_summary.sh  resolve_publish_plan.sh  run_cargo_deny.sh  run_publish.sh
scripts/examples/: run_examples.sh
scripts/setup/: repo-setup.sh
warden-ci/: README.md  action.yml
