[workspace]
members = [
    "crates/bpf-api",
    "crates/bpf-core",
    "crates/bpf-host",
    "crates/cli",
    "crates/sandbox-runtime",
    "crates/agent-lite",
    "crates/policy-core",
    "crates/policy-compiler",
    "crates/testkits",
    "examples/network-build",
    "examples/spawn-bash",
    "crates/event-reporting",
]
resolver = "2"

[patch.crates-io]
aya = { git = "https://github.com/aya-rs/aya", rev = "30182463bdb6cce592477e66659d5f66f846cfcf" }
aya-obj = { git = "https://github.com/aya-rs/aya", rev = "30182463bdb6cce592477e66659d5f66f846cfcf" }
aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "30182463bdb6cce592477e66659d5f66f846cfcf", package = "aya-ebpf" }
aya-ebpf-bindings = { git = "https://github.com/aya-rs/aya", rev = "30182463bdb6cce592477e66659d5f66f846cfcf", package = "aya-ebpf-bindings" }
aya-ebpf-cty = { git = "https://github.com/aya-rs/aya", rev = "30182463bdb6cce592477e66659d5f66f846cfcf", package = "aya-ebpf-cty" }
aya-ebpf-macros = { git = "https://github.com/aya-rs/aya", rev = "30182463bdb6cce592477e66659d5f66f846cfcf", package = "aya-ebpf-macros" }
