[package]
name = "qqrm-agent-lite"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "User-space agent streaming cargo-warden sandbox telemetry."
repository = "https://github.com/qqrm/cargo-warden"
homepage = "https://github.com/qqrm/cargo-warden"
documentation = "https://docs.rs/qqrm-agent-lite"
readme = "../../README.md"

[dependencies]
aya = { version = "0.13" }
bpf-api = { package = "qqrm-bpf-api", version = "0.1.0", path = "../bpf-api" }
serde_json = "1"
event-reporting = { version = "0.1.0", path = "../event-reporting" }

anyhow = "1"
log = "0.4"
systemd-journal-logger = "2.2"
libc = "0.2"
prometheus = "0.14.0"
tiny_http = "0.12"
cfg-if = "1.0"
file-rotate = "0.8"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
tonic = { version = "0.10", features = ["transport"], optional = true }
prost = { version = "0.12", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

[build-dependencies]
tonic-build = { version = "0.10", optional = true }

[features]
default = []
grpc = ["tonic", "prost", "tokio", "tokio-stream", "tonic-build", "futures-core", "futures-util"]

[package.metadata.cargo-machete]
ignored = ["prost"]

[dev-dependencies]
tempfile = "3"
serial_test = "3"
