[package]
name = "warden-bpf-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "eBPF enforcement programs for the cargo-warden sandbox."
repository = "https://github.com/warden/cargo-warden"
homepage = "https://github.com/warden/cargo-warden"
documentation = "https://docs.rs/warden-bpf-core"
readme = "../../README.md"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
aya-bpf = { package = "aya-ebpf", version = "0.1.1" }
bpf-api = { package = "warden-bpf-api", version = "0.1.0", path = "../bpf-api", optional = true }
bpf-host = { package = "warden-bpf-host", version = "0.1.0", path = "../bpf-host", optional = true }

[features]
fuzzing = ["bpf-api", "bpf-host"]

[target.'cfg(target_arch = "bpf")'.dependencies]
bpf-api = { package = "warden-bpf-api", version = "0.1.0", path = "../bpf-api" }

[dev-dependencies]
bpf-api = { package = "warden-bpf-api", version = "0.1.0", path = "../bpf-api" }
bpf-host = { package = "warden-bpf-host", version = "0.1.0", path = "../bpf-host" }

[build-dependencies]
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }

[package.metadata.cargo-udeps.ignore]
normal = ["aya-bpf"]
