[package]
name = "warden-bpf-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "eBPF enforcement programs for the cargo-warden sandbox."
repository = "https://github.com/qqrm/cargo-warden"
homepage = "https://github.com/qqrm/cargo-warden"
documentation = "https://docs.rs/warden-bpf-core"
readme = "../../README.md"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
fuzzing = ["bpf-api"]

[dependencies]
aya-bpf = { package = "aya-ebpf", version = "0.1.1" }

bpf-api = { package = "warden-bpf-api", version = "0.1.0", path = "../bpf-api", optional = true }

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
arrayvec = "0.7"

[target.'cfg(target_arch = "bpf")'.dependencies]
bpf-api = { package = "warden-bpf-api", version = "0.1.0", path = "../bpf-api" }

[dev-dependencies]
bpf-api = { package = "warden-bpf-api", version = "0.1.0", path = "../bpf-api" }

[package.metadata.cargo-udeps.ignore]
normal = ["aya-bpf"]
