[package]
name = "warden-bpf-host"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Host-side adapters and map shims for warden-bpf-core testing and fuzzing."
repository = "https://github.com/warden/cargo-warden"
homepage = "https://github.com/warden/cargo-warden"
documentation = "https://docs.rs/warden-bpf-host"
readme = "../../README.md"

[dependencies]
arrayvec = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
