[package]
name = "qqrm-cargo-warden"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Command-line interface for the cargo-warden sandbox."
repository = "https://github.com/qqrm/cargo-warden"
homepage = "https://github.com/qqrm/cargo-warden"
documentation = "https://docs.rs/qqrm-cargo-warden"
readme = "../../README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = { workspace = true }
policy-core = { package = "qqrm-policy-core", version = "0.1.0", path = "../policy-core" }
qqrm-policy-compiler = { version = "0.1.0", path = "../policy-compiler" }
sandbox-runtime = { package = "qqrm-sandbox-runtime", version = "0.1.0", path = "../sandbox-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
toml = "0.8"
event-reporting = { version = "0.1.0", path = "../event-reporting" }
directories = "5"


[dev-dependencies]
serial_test = "3"
assert_cmd = "2"
tempfile = "3"
bpf-api = { package = "qqrm-bpf-api", version = "0.1.0", path = "../bpf-api" }
qqrm-testkits = { version = "0.1.0", path = "../testkits" }

[[bin]]
name = "cargo-warden"
path = "src/main.rs"
