[package]
name = "warden-cargo-warden"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Command-line interface for the cargo-warden sandbox."
repository = "https://github.com/warden/cargo-warden"
homepage = "https://github.com/warden/cargo-warden"
documentation = "https://docs.rs/warden-cargo-warden"
readme = "../../README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = { workspace = true }
policy-core = { package = "warden-policy-core", version = "0.1.0", path = "../policy-core" }
warden-policy-compiler = { version = "0.1.0", path = "../policy-compiler" }
sandbox-runtime = { package = "warden-sandbox-runtime", version = "0.1.0", path = "../sandbox-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-jsonlines = "0.7"
semver = "1"
toml = "0.8"
event-reporting = { version = "0.1.0", path = "../event-reporting" }
directories = "5"
itertools = "0.12"


[dev-dependencies]
serial_test = "3"
assert_cmd = "2"
tempfile = "3"
scoped-env = "2.1.0"
bpf-api = { package = "warden-bpf-api", version = "0.1.0", path = "../bpf-api" }
warden-testkits = { package = "warden-testkits", version = "0.1.0", path = "../testkits" }

[[bin]]
name = "cargo-warden"
path = "src/main.rs"
