[package]
name = "event-reporting"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Shared event reporting utilities for the cargo-warden workspace."
repository = "https://github.com/qqrm/cargo-warden"
homepage = "https://github.com/qqrm/cargo-warden"
documentation = "https://docs.rs/event-reporting"
readme = "../../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sarif_rust = "0.3"

[dev-dependencies]
tempfile = "3"
