[package]
name = "qqrm-policy-compiler"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Compile cargo-warden policies into eBPF-friendly representations."
repository = "https://github.com/qqrm/cargo-warden"
homepage = "https://github.com/qqrm/cargo-warden"
documentation = "https://docs.rs/qqrm-policy-compiler"
readme = "../../README.md"

[dependencies]
policy-core = { package = "qqrm-policy-core", version = "0.1.0", path = "../policy-core" }
