[package]
name = "warden-policy-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Policy data model and validation for the cargo-warden sandbox."
repository = "https://github.com/warden/cargo-warden"
homepage = "https://github.com/warden/cargo-warden"
documentation = "https://docs.rs/warden-policy-core"
readme = "../../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"

[dev-dependencies]
proptest = "1"
