[package]
name = "qqrm-testkits"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Testing utilities for cargo-warden sandbox components."
repository = "https://github.com/qqrm/cargo-warden"
homepage = "https://github.com/qqrm/cargo-warden"
documentation = "https://docs.rs/qqrm-testkits"
readme = "../../README.md"

[dependencies]
