[package]
name = "qqrm-testkits"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Testing utilities for cargo-warden sandbox components."
repository = "https://github.com/qqrm/cargo-warden"
homepage = "https://github.com/qqrm/cargo-warden"
documentation = "https://docs.rs/qqrm-testkits"
readme = "../../README.md"

[dependencies]
assert_cmd = "2"
event-reporting = { path = "../event-reporting" }
policy-core = { package = "qqrm-policy-core", path = "../policy-core" }
sandbox-runtime = { package = "qqrm-sandbox-runtime", path = "../sandbox-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
