[package]
name = "warden-bpf-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Shared eBPF API structures for the cargo-warden sandbox."
repository = "https://github.com/qqrm/cargo-warden"
homepage = "https://github.com/qqrm/cargo-warden"
documentation = "https://docs.rs/warden-bpf-api"
readme = "../../README.md"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

